# ov-twin-fw

./: README.md
book/: book.toml
book/src/: SUMMARY.md  comms-postcard-rpc.md  comms.md  custom.md  hello-acc.md  hello-gpios.md  hello-smartleds.md  hello.md  internection-fw.md  internection.md  streaming.md
source/bringup/: Cargo.toml
source/bringup/src/: main.rs
source/perpsi/firmware/: Cargo.toml
source/perpsi/firmware/src/: main.rs  ws2812.rs
source/perpsi/perpsi-host/: Cargo.toml
source/perpsi/perpsi-host-client/: Cargo.toml
source/perpsi/perpsi-host-client/src/: lib.rs
source/perpsi/perpsi-host/src/: main.rs
source/perpsi/perpsi-icd/: Cargo.toml
source/perpsi/perpsi-icd/src/: lib.rs
source/workbook/firmware/: Cargo.toml
source/workbook/firmware/src/: lib.rs
source/workbook/perpsi-host/: Cargo.toml
source/workbook/perpsi-host-client/src/: lib.rs
source/workbook/perpsi-host/src/: main.rs
source/workbook/perpsi-icd/src/: lib.rs
source/workbook/workbook-host/: Cargo.toml
