[package]
name = "perpsi-host-client"
version = "0.1.0"
edition = "2021"

[dependencies.perpsi-icd]
path = "../perpsi-icd"

[dependencies.postcard-rpc]
version = "0.4"
features = [
    "use-std",
    "raw-nusb",
]

[patch.crates-io]
static_cell          = { git = "https://github.com/jamesmunns/static-cell", rev = "c0337f742edcfc5d7bf91f008e37ccdb53cf2cce" }
postcard-rpc         = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "2c11414726d11f3ce34b0e69c99e3b5dc5bdf3ee" }
