[package]
name = "perpsi-host-client"
version = "0.1.0"
edition = "2021"

[dependencies.perpsi-icd]
path = "../perpsi-icd"

[dependencies.postcard-rpc]
version = "0.4"
features = [
    "use-std",
    "raw-nusb",
]

[patch.crates-io]
static_cell          = { git = "https://github.com/jamesmunns/static-cell", rev = "c0337f742edcfc5d7bf91f008e37ccdb53cf2cce" }
postcard-rpc         = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "8e45896029138ef60ca2e8b45249a8ba6caf2685" }
