[package]
name = "perpsi-host-client"
version = "0.1.0"
edition = "2021"

[dependencies.perpsi-icd]
path = "../perpsi-icd"

[dependencies.postcard-rpc]
version = "0.4"
features = [
    "use-std",
    "raw-nusb",
]

[patch.crates-io]
static_cell          = { git = "https://github.com/jamesmunns/static-cell", rev = "c0337f742edcfc5d7bf91f008e37ccdb53cf2cce" }
postcard-rpc         = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "eb304c2f5d9bbda796859b63d831e83d7b82961a" }
