[package]
name = "perpsi-host"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros"
]

[dependencies.perpsi-host-client]
path = "../perpsi-host-client"

[patch.crates-io]
postcard-rpc         = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "2c11414726d11f3ce34b0e69c99e3b5dc5bdf3ee" }
