[package]
name = "perpsi-host"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros"
]

[dependencies.perpsi-host-client]
path = "../perpsi-host-client"

[patch.crates-io]
postcard-rpc         = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "8e45896029138ef60ca2e8b45249a8ba6caf2685" }
