[package]
name = "perpsi-host"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros"
]

[dependencies.perpsi-host-client]
path = "../perpsi-host-client"

[patch.crates-io]
postcard-rpc         = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "b5090f49de5eb6be11df895ea62d089ba6705d9d" }
