[package]
name = "perpsi-icd"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard]
version = "1.0"
features = ["experimental-derive"]

[dependencies.postcard-rpc]
version = "0.4"

[patch.crates-io]
postcard-rpc = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "2c11414726d11f3ce34b0e69c99e3b5dc5bdf3ee" }
