[package]
name = "perpsi-icd"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard]
version = "1.0"
features = ["experimental-derive"]

[dependencies.postcard-rpc]
version = "0.4"

[patch.crates-io]
postcard-rpc = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "8e45896029138ef60ca2e8b45249a8ba6caf2685" }
