[package]
name = "perpsi-icd"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard]
version = "1.0"
features = ["experimental-derive"]

[dependencies.postcard-rpc]
version = "0.4"

[patch.crates-io]
postcard-rpc = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "b5090f49de5eb6be11df895ea62d089ba6705d9d" }
