[package]
name = "perpsi-host"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros"
]

[dependencies.perpsi-host-client]
path = "../perpsi-host-client"

[patch.crates-io]
postcard-rpc         = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "eb304c2f5d9bbda796859b63d831e83d7b82961a" }
